# wallman

./: Cargo.toml  README.md  cli.implementation_plan.md  implementation_plan.md  installer.implementation_plan.md  multimonitor.implementation_plan.md  packager.implementation_plan.md  tirggers.implementation_plan.md
.github/workflows/: build.yml
docs/: README.md  theme_build.md  user_manual.md
example/: pack.sh
example/moon-wall/: manifest.toml
example/weather/: manifest.toml
scripts/: install-completion.sh
src/: app_state.rs  command.rs  config.rs  constants.rs  lib.rs  main.rs
src/cli/: app.rs  dispatcher.rs  mod.rs
src/cli/commands/: completion.rs  config.rs  daemon.rs  mod.rs  pack.rs  theme.rs
src/daemon/: manager.rs
src/format/: install.rs  mod.rs  pack.rs
src/outputs/: mod.rs  resolver.rs
src/triggers/: daytime_trigger.rs  manager.rs  mod.rs  static_trigger.rs  trigger.rs  weather_trigger.rs
src/wallpaper/: apply.rs  mod.rs
