[package]
name = "wallman"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4", features = ["derive", "color"] }
clap_complete = "4.5"
dirs = "6.0.0"
image = "0.25.9"
lazy_static = "1.5.0"
libc = "0.2"
nix = { version = "0.29", features = ["signal", "process"] }
reqwest = { version = "0.13.2", default-features = false, features = [
	"json",
	"blocking",
	"rustls-tls-ring",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.128"
tar = "0.4.44"
toml = "1.0.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
zstd = "0.13.3"
